# orchestrator-agent

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copyright.yaml
.github/workflows/: ci.yml  lint.yml  tests.yml
demos/: a2a_client.py  a2a_repl.py  agui_client.py  mcp_client.py
docs/: architecture.md  plugin-driven-capabilities.md
docs/superpowers/plans/: 2026-05-26-ci-tagged-artifacts.md  2026-06-01-lenient-search-semantic-fallback.md  2026-06-01-outbound-oauth-toggle.md  2026-06-02-agent-logging.md  2026-06-03-fetch-by-id-fastpath.md  2026-06-03-identifier-aware-search.md  2026-06-10-optional-langfuse-tracing.md
docs/superpowers/specs/: 2026-05-26-ci-tagged-artifacts-design.md  2026-06-01-lenient-search-semantic-fallback-design.md  2026-06-01-outbound-oauth-toggle-design.md  2026-06-02-agent-logging-design.md  2026-06-03-fetch-by-id-fastpath-design.md  2026-06-03-identifier-aware-search-design.md  2026-06-10-optional-langfuse-tracing-design.md
scripts/: port-forward.sh
src/orchestrator_agent/: __init__.py  agent.py  app.py  artifacts.py  artifacts_store.py  auth.py  entity_lookup.py  events.py  handlers.py  mcp_client.py  memory.py  observability.py  persistence.py  planner.py  prompts.py  security.py  settings.py  skill_runner.py  skills.py  state.py  tool_names.py  utils.py
src/orchestrator_agent/adapters/: __init__.py  a2a.py  ag_ui.py  mcp.py  openai.py  stream.py
src/orchestrator_agent/api/: api.py  dependencies.py
src/orchestrator_agent/api/endpoints/: agent.py  health.py  queries.py  threads.py
src/orchestrator_agent/capabilities/: __init__.py  config.py  hooks.py  loader.py  prompts.py  spec.py  system_prompt.md
src/orchestrator_agent/capabilities/behavior/: __init__.py  artifacts.py  base.py
src/orchestrator_agent/capabilities/plugins/: aggregate.md  entity.md  export.md  search.md
src/orchestrator_agent/rendering/: __init__.py  charts.py  tables.py
src/orchestrator_agent/tools/: __init__.py  a2a_delegate.py  aggregation.py  filters.py  form_prefill.py  result_actions.py  search.py  wfo_mcp_client.py  workflow_forms.py
tests/: conftest.py  test_adapters.py  test_agent_stream.py  test_artifacts.py  test_auth.py  test_capabilities.py  test_capabilities_config.py  test_entity_lookup.py  test_events.py  test_filters.py  test_handlers.py  test_mcp_client.py  test_memory.py  test_observability.py  test_plugin_loader.py  test_prompts.py  test_result_actions.py  test_search.py  test_settings.py  test_skills.py  test_state.py  test_tool_contract.py  test_utils.py
